bug fix overflow

--- a/public/css/98.css
+++ b/public/css/98.css
@@ -15,6 +15,7 @@
 body {
     font-family: "Windows Regular", "Fixedsys", "MS Sans Serif", monospace;
     background-color: #008080;
+    overflow-x: hidden;
 }
 
 .image-container {
